Cleanup and enhancements to configure.in  Removed last remains of octagonal version from source files

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,5 @@
-SUBDIRS = source data doc
-EXTRA_DIST = asc.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm
-AUTOMAKE_OPTIONS = foreign
+MAINTAINERCLEANFILES	= Makefile.in
+
+SUBDIRS 		= source data doc
+EXTRA_DIST 		= asc.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO asc.lsm
+AUTOMAKE_OPTIONS 	= foreign
