--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,13 +1,12 @@
 MAINTAINERCLEANFILES    = Makefile.in
+# main.con buildings.con mk1.con trrobj.con trrobj2.con
 
-pkgdata_DATA = main.con buildings.con mk1.con trrobj.con trrobj2.con
+pkgdata_DATA 		= main.con buildings.con mk1.con trrobj.con trrobj2.con
 
-pkgdatadir = $(datadir)/games/@PACKAGE@
+pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
 main.con: @MAINCONDATA@
 	../source/tools/linux/asc_mount @MAINCONDATA@ main.con
 
 clean-local:
 	rm main.con
-
-
