--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,3 +1,6 @@
-SUBDIRS = @GENCL@ docs sdl libs ai unix tools
-EXTRA_DIST = *.cpp *.h *.inc
+MAINTAINERCLEANFILES	= Makefile.in
+
+SUBDIRS 		= @GENCL@ docs sdl libs ai unix tools
+
+EXTRA_DIST 		= *.cpp *.h *.inc
 
