--- a/source/ai/Makefile.am
+++ b/source/ai/Makefile.am
@@ -1,5 +1,11 @@
-noinst_LIBRARIES = libai.a
 
-libai_a_SOURCES = base.cpp misc.cpp strategy.cpp valuation.cpp buildingcapture.cpp service.cpp tactics.cpp
+MAINTAINERCLEANFILES	= Makefile.in
 
+CXXFLAGS		= @CXXFLAGS@ @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
+
+noinst_LTLIBRARIES 	= libai.la
+
+libai_la_SOURCES	= base.cpp misc.cpp strategy.cpp valuation.cpp \
+buildingcapture.cpp service.cpp tactics.cpp
+libai_la_LIBADD		= @SDL_LIBS@ @SDLMM_LIBS@
 
