--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -1,6 +1,14 @@
-noinst_LIBRARIES = libsdl.a
 
-libsdl_a_SOURCES = sound.cpp graphics.cpp events.cpp SDLStretch.cpp loadimage.cpp asc_IMG_jpg.c
+MAINTAINERCLEANFILES	= Makefile.in
+
+CXXFLAGS		= @CXXFLAGS@ @SDL_CFLAGS@ @SDLMM_CXXFLAGS@
+
+noinst_LTLIBRARIES	= libsdl.la
+
+libsdl_la_SOURCES 	= sound.cpp graphics.cpp events.cpp SDLStretch.cpp \
+loadimage.cpp asc_IMG_jpg.c
+libsdl_la_LIBADD	= @SDL_LIBS@ @SDLMM_LIBS@ -lSDL_image -lSDL_mixer \
+-ljpeg
 
 
 
