--- a/source/tools/Makefile.am
+++ b/source/tools/Makefile.am
@@ -1,5 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.3 2001-02-26 12:35:41 mbickel Exp $
+## $Id: Makefile.am,v 1.4 2001-12-14 10:20:06 mbickel Exp $
 
-SUBDIRS = linux
+MAINTAINERCLEANFILES	= Makefile.in
+
+SUBDIRS			= linux
