--- a/source/tools/linux/Makefile.in
+++ b/source/tools/linux/Makefile.in
@@ -59,15 +59,24 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+host_alias = @host_alias@
+host_triplet = @host@
+AS = @AS@
 CC = @CC@
 CXX = @CXX@
+DLLTOOL = @DLLTOOL@
 DOCBOOK2MAN = @DOCBOOK2MAN@
 GENCL = @GENCL@
 GENCLL = @GENCLL@
 LDADDLIBBZ2 = @LDADDLIBBZ2@
 LIBBZ2 = @LIBBZ2@
+LIBTOOL = @LIBTOOL@
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
+LN_S = @LN_S@
+LTLIBOBJS = @LTLIBOBJS@
 MAINCONDATA = @MAINCONDATA@
 MAKEINFO = @MAKEINFO@
+OBJDUMP = @OBJDUMP@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 SDLMM_CONFIG = @SDLMM_CONFIG@
@@ -79,30 +88,27 @@ SDL_LIBS = @SDL_LIBS@
 SGML2MAN = @SGML2MAN@
 VERSION = @VERSION@
 
-CXXFLAGS = @CXXFLAGS@ -Dconverter
+MAINTAINERCLEANFILES = Makefile.in
 
-bin_PROGRAMS = asc_demount                asc_mount                  asc_makegfx                asc_mntgraph                asc_viewid                asc_tank2pcx                asc_bin2text                asc_weaponguide
+CXXFLAGS = @CXXFLAGS@ @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ -Dconverter
+
+bin_PROGRAMS = asc_demount 	       asc_mount                asc_makegfx                asc_viewid                asc_bin2text                asc_weaponguide
 
 
-asc_demount_SOURCES = demount.cpp      basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
+asc_demount_SOURCES = demount.cpp basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
+
 asc_mount_SOURCES = mount.cpp        basestrm.cpp misc.cpp ascstring.cpp strtmesg.cpp
-#asc_gfx2pcx_SOURCES     = bi2pcx.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
 asc_makegfx_SOURCES = makegfx.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
-asc_mntgraph_SOURCES = mntgraph.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
 asc_viewid_SOURCES = viewid.cpp       basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
-asc_tank2pcx_SOURCES = pcxtank.cpp      basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp
 asc_bin2text_SOURCES = bin2text.cpp     basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
 asc_weaponguide_SOURCES = weaponguide.cpp  basestrm.cpp misc.cpp ascstring.cpp loadpcxc.cpp palette.cpp sgstream.cpp newfont.cpp basegfx.cpp graphicset.cpp gameoptions.cpp CLoadable.cpp Named.cpp Property.cpp PropertyGroup.cpp stack.cpp buildingtype.cpp typen.cpp vehicletype.cpp password.cpp strtmesg.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp stringtokenizer.cpp itemrepository.cpp
 
-asc_mount_LDADD = -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_demount_LDADD = -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-#asc_gfx2pcx_LDADD    = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_makegfx_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_mntgraph_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_viewid_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_tank2pcx_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_bin2text_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
-asc_weaponguide_LDADD = ../../sdl/libsdl.a -lSDL -lSDLmm -lpthread @LDADDLIBBZ2@
+asc_mount_LDADD = @SDL_LIBS@ @SDLMM_LIBS@ -lpthread @LDADDLIBBZ2@
+asc_demount_LDADD = @SDL_LIBS@ @SDLMM_LIBS@ @LDADDLIBBZ2@
+asc_makegfx_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@
+asc_viewid_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@
+asc_bin2text_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@
+asc_weaponguide_LDADD = $(top_builddir)/source/sdl/libsdl.la @LDADDLIBBZ2@
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../../config.h
 CONFIG_CLEAN_FILES = 
@@ -126,39 +132,23 @@ gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
 textfileparser.o terraintype.o objecttype.o textfiletags.o \
 stringtokenizer.o
-asc_makegfx_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_makegfx_DEPENDENCIES =  $(top_builddir)/source/sdl/libsdl.la
 asc_makegfx_LDFLAGS = 
-asc_mntgraph_OBJECTS =  mntgraph.o basestrm.o misc.o ascstring.o \
-loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
-gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
-buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
-textfileparser.o terraintype.o objecttype.o textfiletags.o \
-stringtokenizer.o
-asc_mntgraph_DEPENDENCIES =  ../../sdl/libsdl.a
-asc_mntgraph_LDFLAGS = 
 asc_viewid_OBJECTS =  viewid.o basestrm.o misc.o ascstring.o loadpcxc.o \
 palette.o sgstream.o newfont.o basegfx.o graphicset.o gameoptions.o \
 CLoadable.o Named.o Property.o PropertyGroup.o stack.o buildingtype.o \
 typen.o vehicletype.o password.o strtmesg.o textfileparser.o \
 terraintype.o objecttype.o textfiletags.o stringtokenizer.o \
 itemrepository.o
-asc_viewid_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_viewid_DEPENDENCIES =  $(top_builddir)/source/sdl/libsdl.la
 asc_viewid_LDFLAGS = 
-asc_tank2pcx_OBJECTS =  pcxtank.o basestrm.o misc.o ascstring.o \
-loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
-gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
-buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
-textfileparser.o terraintype.o objecttype.o textfiletags.o \
-stringtokenizer.o
-asc_tank2pcx_DEPENDENCIES =  ../../sdl/libsdl.a
-asc_tank2pcx_LDFLAGS = 
 asc_bin2text_OBJECTS =  bin2text.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
 gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
 textfileparser.o terraintype.o objecttype.o textfiletags.o \
 stringtokenizer.o itemrepository.o
-asc_bin2text_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_bin2text_DEPENDENCIES =  $(top_builddir)/source/sdl/libsdl.la
 asc_bin2text_LDFLAGS = 
 asc_weaponguide_OBJECTS =  weaponguide.o basestrm.o misc.o ascstring.o \
 loadpcxc.o palette.o sgstream.o newfont.o basegfx.o graphicset.o \
@@ -166,11 +156,12 @@ gameoptions.o CLoadable.o Named.o Property.o PropertyGroup.o stack.o \
 buildingtype.o typen.o vehicletype.o password.o strtmesg.o \
 textfileparser.o terraintype.o objecttype.o textfiletags.o \
 stringtokenizer.o itemrepository.o
-asc_weaponguide_DEPENDENCIES =  ../../sdl/libsdl.a
+asc_weaponguide_DEPENDENCIES =  $(top_builddir)/source/sdl/libsdl.la
 asc_weaponguide_LDFLAGS = 
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
+LTCXXCOMPILE = $(LIBTOOL) --mode=compile $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 CXXLD = $(CXX)
-CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
+CXXLINK = $(LIBTOOL) --mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(LDFLAGS) -o $@
 DIST_COMMON =  Makefile.am Makefile.in
 
 
@@ -182,18 +173,17 @@ DEP_FILES =  .deps/CLoadable.P .deps/Named.P .deps/Property.P \
 .deps/PropertyGroup.P .deps/ascstring.P .deps/basegfx.P \
 .deps/basestrm.P .deps/bin2text.P .deps/buildingtype.P .deps/demount.P \
 .deps/gameoptions.P .deps/graphicset.P .deps/itemrepository.P \
-.deps/loadpcxc.P .deps/makegfx.P .deps/misc.P .deps/mntgraph.P \
-.deps/mount.P .deps/newfont.P .deps/objecttype.P .deps/palette.P \
-.deps/password.P .deps/pcxtank.P .deps/sgstream.P .deps/stack.P \
-.deps/stringtokenizer.P .deps/strtmesg.P .deps/terraintype.P \
-.deps/textfileparser.P .deps/textfiletags.P .deps/typen.P \
-.deps/vehicletype.P .deps/viewid.P .deps/weaponguide.P
-SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_makegfx_SOURCES) $(asc_mntgraph_SOURCES) $(asc_viewid_SOURCES) $(asc_tank2pcx_SOURCES) $(asc_bin2text_SOURCES) $(asc_weaponguide_SOURCES)
-OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_mntgraph_OBJECTS) $(asc_viewid_OBJECTS) $(asc_tank2pcx_OBJECTS) $(asc_bin2text_OBJECTS) $(asc_weaponguide_OBJECTS)
+.deps/loadpcxc.P .deps/makegfx.P .deps/misc.P .deps/mount.P \
+.deps/newfont.P .deps/objecttype.P .deps/palette.P .deps/password.P \
+.deps/sgstream.P .deps/stack.P .deps/stringtokenizer.P .deps/strtmesg.P \
+.deps/terraintype.P .deps/textfileparser.P .deps/textfiletags.P \
+.deps/typen.P .deps/vehicletype.P .deps/viewid.P .deps/weaponguide.P
+SOURCES = $(asc_demount_SOURCES) $(asc_mount_SOURCES) $(asc_makegfx_SOURCES) $(asc_viewid_SOURCES) $(asc_bin2text_SOURCES) $(asc_weaponguide_SOURCES)
+OBJECTS = $(asc_demount_OBJECTS) $(asc_mount_OBJECTS) $(asc_makegfx_OBJECTS) $(asc_viewid_OBJECTS) $(asc_bin2text_OBJECTS) $(asc_weaponguide_OBJECTS)
 
 all: all-redirect
 .SUFFIXES:
-.SUFFIXES: .S .c .cpp .o .s
+.SUFFIXES: .S .c .cpp .lo .o .s
 $(srcdir)/Makefile.in: Makefile.am $(top_srcdir)/configure.in $(ACLOCAL_M4) 
 	cd $(top_srcdir) && $(AUTOMAKE) --gnu source/tools/linux/Makefile
 
@@ -216,8 +206,8 @@ install-binPROGRAMS: $(bin_PROGRAMS)
 	$(mkinstalldirs) $(DESTDIR)$(bindir)
 	@list='$(bin_PROGRAMS)'; for p in $$list; do \
 	  if test -f $$p; then \
-	    echo "  $(INSTALL_PROGRAM) $$p $(DESTDIR)$(bindir)/`echo $$p|sed 's/$(EXEEXT)$$//'|sed '$(transform)'|sed 's/$$/$(EXEEXT)/'`"; \
-	     $(INSTALL_PROGRAM) $$p $(DESTDIR)$(bindir)/`echo $$p|sed 's/$(EXEEXT)$$//'|sed '$(transform)'|sed 's/$$/$(EXEEXT)/'`; \
+	    echo " $(LIBTOOL)  --mode=install $(INSTALL_PROGRAM) $$p $(DESTDIR)$(bindir)/`echo $$p|sed 's/$(EXEEXT)$$//'|sed '$(transform)'|sed 's/$$/$(EXEEXT)/'`"; \
+	    $(LIBTOOL)  --mode=install $(INSTALL_PROGRAM) $$p $(DESTDIR)$(bindir)/`echo $$p|sed 's/$(EXEEXT)$$//'|sed '$(transform)'|sed 's/$$/$(EXEEXT)/'`; \
 	  else :; fi; \
 	done
 
@@ -243,6 +233,22 @@ distclean-compile:
 
 maintainer-clean-compile:
 
+.s.lo:
+	$(LIBTOOL) --mode=compile $(COMPILE) -c $<
+
+.S.lo:
+	$(LIBTOOL) --mode=compile $(COMPILE) -c $<
+
+mostlyclean-libtool:
+	-rm -f *.lo
+
+clean-libtool:
+	-rm -rf .libs _libs
+
+distclean-libtool:
+
+maintainer-clean-libtool:
+
 asc_demount: $(asc_demount_OBJECTS) $(asc_demount_DEPENDENCIES)
 	@rm -f asc_demount
 	$(CXXLINK) $(asc_demount_LDFLAGS) $(asc_demount_OBJECTS) $(asc_demount_LDADD) $(LIBS)
@@ -255,17 +261,9 @@ asc_makegfx: $(asc_makegfx_OBJECTS) $(asc_makegfx_DEPENDENCIES)
 	@rm -f asc_makegfx
 	$(CXXLINK) $(asc_makegfx_LDFLAGS) $(asc_makegfx_OBJECTS) $(asc_makegfx_LDADD) $(LIBS)
 
-asc_mntgraph: $(asc_mntgraph_OBJECTS) $(asc_mntgraph_DEPENDENCIES)
-	@rm -f asc_mntgraph
-	$(CXXLINK) $(asc_mntgraph_LDFLAGS) $(asc_mntgraph_OBJECTS) $(asc_mntgraph_LDADD) $(LIBS)
-
 asc_viewid: $(asc_viewid_OBJECTS) $(asc_viewid_DEPENDENCIES)
 	@rm -f asc_viewid
 	$(CXXLINK) $(asc_viewid_LDFLAGS) $(asc_viewid_OBJECTS) $(asc_viewid_LDADD) $(LIBS)
-
-asc_tank2pcx: $(asc_tank2pcx_OBJECTS) $(asc_tank2pcx_DEPENDENCIES)
-	@rm -f asc_tank2pcx
-	$(CXXLINK) $(asc_tank2pcx_LDFLAGS) $(asc_tank2pcx_OBJECTS) $(asc_tank2pcx_LDADD) $(LIBS)
 
 asc_bin2text: $(asc_bin2text_OBJECTS) $(asc_bin2text_DEPENDENCIES)
 	@rm -f asc_bin2text
@@ -276,6 +274,8 @@ asc_weaponguide: $(asc_weaponguide_OBJECTS) $(asc_weaponguide_DEPENDENCIES)
 	$(CXXLINK) $(asc_weaponguide_LDFLAGS) $(asc_weaponguide_OBJECTS) $(asc_weaponguide_LDADD) $(LIBS)
 .cpp.o:
 	$(CXXCOMPILE) -c $<
+.cpp.lo:
+	$(LTCXXCOMPILE) -c $<
 
 tags: TAGS
 
@@ -319,7 +319,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$d/$$file $(distdir)/$$file; \
+	    cp -pr $$/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
@@ -413,25 +413,29 @@ distclean-generic:
 	-rm -f config.cache config.log stamp-h stamp-h[0-9]*
 
 maintainer-clean-generic:
+	-test -z "$(MAINTAINERCLEANFILES)" || rm -f $(MAINTAINERCLEANFILES)
 mostlyclean-am:  mostlyclean-binPROGRAMS mostlyclean-compile \
-		mostlyclean-tags mostlyclean-depend mostlyclean-generic
+		mostlyclean-libtool mostlyclean-tags mostlyclean-depend \
+		mostlyclean-generic
 
 mostlyclean: mostlyclean-am
 
-clean-am:  clean-binPROGRAMS clean-compile clean-tags clean-depend \
-		clean-generic mostlyclean-am
+clean-am:  clean-binPROGRAMS clean-compile clean-libtool clean-tags \
+		clean-depend clean-generic mostlyclean-am
 
 clean: clean-am
 
-distclean-am:  distclean-binPROGRAMS distclean-compile distclean-tags \
-		distclean-depend distclean-generic clean-am
+distclean-am:  distclean-binPROGRAMS distclean-compile distclean-libtool \
+		distclean-tags distclean-depend distclean-generic \
+		clean-am
+	-rm -f libtool
 
 distclean: distclean-am
 
 maintainer-clean-am:  maintainer-clean-binPROGRAMS \
-		maintainer-clean-compile maintainer-clean-tags \
-		maintainer-clean-depend maintainer-clean-generic \
-		distclean-am
+		maintainer-clean-compile maintainer-clean-libtool \
+		maintainer-clean-tags maintainer-clean-depend \
+		maintainer-clean-generic distclean-am
 	@echo "This command is intended for maintainers to use;"
 	@echo "it deletes files that may require special tools to rebuild."
 
@@ -440,14 +444,16 @@ maintainer-clean: maintainer-clean-am
 .PHONY: mostlyclean-binPROGRAMS distclean-binPROGRAMS clean-binPROGRAMS \
 maintainer-clean-binPROGRAMS uninstall-binPROGRAMS install-binPROGRAMS \
 mostlyclean-compile distclean-compile clean-compile \
-maintainer-clean-compile tags mostlyclean-tags distclean-tags \
-clean-tags maintainer-clean-tags distdir mostlyclean-depend \
-distclean-depend clean-depend maintainer-clean-depend info-am info \
-dvi-am dvi check check-am installcheck-am installcheck install-exec-am \
-install-exec install-data-am install-data install-am install \
-uninstall-am uninstall all-redirect all-am all installdirs \
-mostlyclean-generic distclean-generic clean-generic \
-maintainer-clean-generic clean mostlyclean distclean maintainer-clean
+maintainer-clean-compile mostlyclean-libtool distclean-libtool \
+clean-libtool maintainer-clean-libtool tags mostlyclean-tags \
+distclean-tags clean-tags maintainer-clean-tags distdir \
+mostlyclean-depend distclean-depend clean-depend \
+maintainer-clean-depend info-am info dvi-am dvi check check-am \
+installcheck-am installcheck install-exec-am install-exec \
+install-data-am install-data install-am install uninstall-am uninstall \
+all-redirect all-am all installdirs mostlyclean-generic \
+distclean-generic clean-generic maintainer-clean-generic clean \
+mostlyclean distclean maintainer-clean
 
 
 vpath %.cpp ..:../..
