--- a/source/unix/mapeditor/Makefile.am
+++ b/source/unix/mapeditor/Makefile.am
@@ -1,20 +1,46 @@
 ## Process this file with automake to produce Makefile.in
 ######################################################################
-## $Id: Makefile.am,v 1.5 2001-12-05 16:34:12 mbickel Exp $
+## $Id: Makefile.am,v 1.6 2001-12-14 10:20:06 mbickel Exp $
 
 vpath %.cpp ../..
 
-CXXFLAGS = @CXXFLAGS@ -Dkarteneditor -I./ -DFREEMAPZOOM -DNEWKEYB
+MAINTAINERCLEANFILES	= Makefile.in
 
-bin_PROGRAMS = asc_mapedit asc_map2pcx
+INCLUDES		= -I$(top_builddir) -I$(top_src_dir) \
+			  -I$(top_builddir)/source -I$(top_src_dir)/source
 
-asc_mapedit_SOURCES = edevents.cpp edgen.cpp edglobal.cpp edmain.cpp edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp stringtokenizer.cpp
-asc_mapedit_LDADD   = ../../sdl/libsdl.a ../../libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image -lSDLmm @LDADDLIBBZ2@
+CXXFLAGS 		= @CXXFLAGS@ @SDL_CFLAGS@ @SDLMM_CXXFLAGS@ \
+-Dkarteneditor -DFREEMAPZOOM -DNEWKEYB
 
-asc_map2pcx_SOURCES = map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp stringtokenizer.cpp
-asc_map2pcx_LDADD   = ../../sdl/libsdl.a ../../libs/triangul/libtriangul.a -lSDL -lpthread -lSDL_image -lSDLmm @LDADDLIBBZ2@
-		
-		
+bin_PROGRAMS 		= asc_mapedit asc_map2pcx
+
+asc_mapedit_SOURCES 	= edevents.cpp edgen.cpp edglobal.cpp edmain.cpp \
+edselfnt.cpp edmisc.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp \
+spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp loadpcxc.cpp \
+loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp basegfx.cpp \
+attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp gameoptions.cpp \
+Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp \
+mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp \
+password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp \
+vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
+terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
+stringtokenizer.cpp
+asc_mapedit_LDADD   	= $(top_builddir)/source/sdl/libsdl.la \
+$(top_builddir)/source/libs/triangul/libtriangul.la @SDLMM_LIBS@ @LDADDLIBBZ2@
+
+asc_map2pcx_SOURCES	= map2pcx.cpp weather.cpp typen.cpp strtmesg.cpp \
+stack.cpp spfst.cpp sgstream.cpp pd.cpp palette.cpp newfont.cpp misc.cpp \
+loadpcxc.cpp loaders.cpp loadbi3.cpp dlg_box.cpp dialog.cpp basestrm.cpp \
+basegfx.cpp attack.cpp CLoadable.cpp Property.cpp PropertyGroup.cpp \
+gameoptions.cpp Named.cpp buildingtype.cpp vehicletype.cpp containerbase.cpp \
+mapalgorithms.cpp viewcalculation.cpp gamemap.cpp password.cpp \
+password_dialog.cpp research.cpp mapdisplay.cpp ascstring.cpp graphicset.cpp \
+vehicle.cpp buildings.cpp networkdata.cpp resourcenet.cpp textfileparser.cpp \
+terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
+stringtokenizer.cpp
+asc_map2pcx_LDADD   	= $(top_builddir)/source/libs/triangul/libtriangul.la \
+$(top_builddir)/source/sdl/libsdl.la
+
 # vim: noexpandtab ai
 
 
